Detect '_pin' slides and apply z-index to them, to ensure they overlay the other slides

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,10 @@ area {
     /* OU content width is 525px */
 }
 
+.map-pin {
+    z-index: 10;
+}
+
 .content-col-3 {
     float: left;
     width: 22.999999%;
